--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 * {
@@ -8,95 +7,105 @@
 }
 
 body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    'Inter',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
   line-height: 1.5;
   color: var(--blue-grey-900);
   background-color: var(--blue-grey-050);
   overflow-x: clip;
+  height: 100%;
 }
 
 /* Color Palette */
 :root {
   /* Primary */
-  --teal-050: #EFFCF6;
-  --teal-100: #C6F7E2;
-  --teal-200: #8EEDC7;
-  --teal-300: #65D6AD;
-  --teal-400: #3EBD93;
-  --teal-500: #27AB83;
+  --teal-050: #effcf6;
+  --teal-100: #c6f7e2;
+  --teal-200: #8eedc7;
+  --teal-300: #65d6ad;
+  --teal-400: #3ebd93;
+  --teal-500: #27ab83;
   --teal-600: #199473;
-  --teal-700: #147D64;
-  --teal-800: #0C6B58;
-  --teal-900: #014D40;
+  --teal-700: #147d64;
+  --teal-800: #0c6b58;
+  --teal-900: #014d40;
 
   /* Neutrals */
-  --blue-grey-050: #F0F4F8;
-  --blue-grey-100: #D9E2EC;
-  --blue-grey-200: #BCCCDC;
-  --blue-grey-300: #9FB3C8;
-  --blue-grey-400: #829AB1;
-  --blue-grey-500: #627D98;
+  --blue-grey-050: #f0f4f8;
+  --blue-grey-100: #d9e2ec;
+  --blue-grey-200: #bcccdc;
+  --blue-grey-300: #9fb3c8;
+  --blue-grey-400: #829ab1;
+  --blue-grey-500: #627d98;
   --blue-grey-600: #486581;
-  --blue-grey-700: #334E68;
-  --blue-grey-800: #243B53;
-  --blue-grey-900: #102A43;
+  --blue-grey-700: #334e68;
+  --blue-grey-800: #243b53;
+  --blue-grey-900: #102a43;
 
   /* Supporting */
-  --blue-050: #DCEEFB;
-  --blue-100: #B6E0FE;
-  --blue-200: #84C5F4;
-  --blue-300: #62B0E8;
-  --blue-400: #4098D7;
-  --blue-500: #2680C2;
-  --blue-600: #186FAF;
-  --blue-700: #0F609B;
-  --blue-800: #0A558C;
-  --blue-900: #003E6B;
+  --blue-050: #dceefb;
+  --blue-100: #b6e0fe;
+  --blue-200: #84c5f4;
+  --blue-300: #62b0e8;
+  --blue-400: #4098d7;
+  --blue-500: #2680c2;
+  --blue-600: #186faf;
+  --blue-700: #0f609b;
+  --blue-800: #0a558c;
+  --blue-900: #003e6b;
 
-  --purple-050: #EAE2F8;
-  --purple-100: #CFBCF2;
-  --purple-200: #A081D9;
-  --purple-300: #8662C7;
-  --purple-400: #724BB7;
-  --purple-500: #653CAD;
-  --purple-600: #51279B;
+  --purple-050: #eae2f8;
+  --purple-100: #cfbcf2;
+  --purple-200: #a081d9;
+  --purple-300: #8662c7;
+  --purple-400: #724bb7;
+  --purple-500: #653cad;
+  --purple-600: #51279b;
   --purple-700: #421987;
-  --purple-800: #34126F;
+  --purple-800: #34126f;
   --purple-900: #240754;
 
-  --red-050: #FFEEEE;
-  --red-100: #FACDCD;
-  --red-200: #F29B9B;
-  --red-300: #E66A6A;
-  --red-400: #D64545;
-  --red-500: #BA2525;
-  --red-600: #A61B1B;
+  --red-050: #ffeeee;
+  --red-100: #facdcd;
+  --red-200: #f29b9b;
+  --red-300: #e66a6a;
+  --red-400: #d64545;
+  --red-500: #ba2525;
+  --red-600: #a61b1b;
   --red-700: #911111;
-  --red-800: #780A0A;
+  --red-800: #780a0a;
   --red-900: #610404;
 
-  --yellow-050: #FFFAEB;
-  --yellow-100: #FCEFC7;
-  --yellow-200: #F8E3A3;
-  --yellow-300: #F9DA8B;
-  --yellow-400: #F7D070;
-  --yellow-500: #E9B949;
-  --yellow-600: #C99A2E;
-  --yellow-700: #A27C1A;
-  --yellow-800: #7C5E10;
-  --yellow-900: #513C06;
+  --yellow-050: #fffaeb;
+  --yellow-100: #fcefc7;
+  --yellow-200: #f8e3a3;
+  --yellow-300: #f9da8b;
+  --yellow-400: #f7d070;
+  --yellow-500: #e9b949;
+  --yellow-600: #c99a2e;
+  --yellow-700: #a27c1a;
+  --yellow-800: #7c5e10;
+  --yellow-900: #513c06;
 }
-
 
 a {
   text-decoration: none;
   color: inherit;
 }
 
-.fw-bold{
+.fw-bold {
   font-weight: bold;
 }
-
 
 img {
   max-width: 100%;
@@ -108,7 +117,6 @@ img {
   margin: 0 auto;
   padding: 0 2rem;
 }
-
 
 .btn {
   display: inline-block;
@@ -139,5 +147,3 @@ img {
   background-color: var(--teal-500);
   color: white;
 }
-
-
